@@ -49,17 +49,11 @@
 
 package com.openexchange.ajax;
 
-import static com.openexchange.ajax.SessionUtility.getSessionObject;
 import java.io.IOException;
-import java.io.PrintWriter;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import org.json.JSONException;
-import com.openexchange.ajax.container.Response;
-import com.openexchange.ajax.writer.ResponseWriter;
 import com.openexchange.exception.OXException;
-import com.openexchange.sessiond.SessionExceptionCodes;
 import com.openexchange.tools.servlet.http.Tools;
 import com.openexchange.tools.session.ServerSession;
 
@@ -83,37 +77,7 @@ public abstract class PermissionServlet extends SessionServlet {
             }
             super.service(req, resp);
         } catch (final OXException e) {
-            if (SessionExceptionCodes.getErrorPrefix().equals(e.getPrefix())) {
-                LOG.debug("", e);
-                handleSessiondException(e, req, resp);
-                /*
-                 * Return JSON response
-                 */
-                final Response response = new Response();
-                response.setException(e);
-                resp.setContentType(CONTENTTYPE_JAVASCRIPT);
-                final PrintWriter writer = resp.getWriter();
-                try {
-                    ResponseWriter.write(response, writer, localeFrom(session));
-                    writer.flush();
-                } catch (final JSONException e1) {
-                    log(RESPONSE_ERROR, e1);
-                    sendError(resp);
-                }
-            } else {
-                e.log(LOG);
-                final Response response = new Response(getSessionObject(req));
-                response.setException(e);
-                resp.setContentType(CONTENTTYPE_JAVASCRIPT);
-                final PrintWriter writer = resp.getWriter();
-                try {
-                    ResponseWriter.write(response, writer, localeFrom(session));
-                    writer.flush();
-                } catch (final JSONException e1) {
-                    log(RESPONSE_ERROR, e1);
-                    sendError(resp);
-                }
-            }
+            handleOXException(e, req, resp, session);
         }
     }
 
